-- SQL schema generated from the Prisma models

CREATE TABLE Admin (
    id INT AUTO_INCREMENT PRIMARY KEY,
    email VARCHAR(255) UNIQUE NOT NULL,
    password VARCHAR(255) NOT NULL,
    createById INT,
    createAt DATETIME DEFAULT CURRENT_TIMESTAMP,
    updateAt DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (createById) REFERENCES Admin(id)
);

CREATE TABLE User (
    id INT AUTO_INCREMENT PRIMARY KEY,
    name VARCHAR(255) NOT NULL,
    email VARCHAR(255) UNIQUE NOT NULL,
    password VARCHAR(255) NOT NULL,
    avatar VARCHAR(255),
    phone VARCHAR(20),
    zalo VARCHAR(50),
    createAt DATETIME DEFAULT CURRENT_TIMESTAMP,
    updateAt DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    status ENUM('ACTIVE', 'BLACKLISTED', 'DEACTIVATED') DEFAULT 'ACTIVE',
    violationCount INT DEFAULT 0,
    resetToken VARCHAR(255),
    resetTokenExpiry DATETIME
);

CREATE TABLE Report (
    id INT AUTO_INCREMENT PRIMARY KEY,
    reporterId INT NOT NULL,
    placeId INT NOT NULL,
    reason VARCHAR(255) NOT NULL,
    status ENUM('PENDING', 'DONE') DEFAULT 'PENDING',
    createdAt DATETIME DEFAULT CURRENT_TIMESTAMP,
    updatedAt DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (reporterId) REFERENCES User(id) ON DELETE CASCADE,
    FOREIGN KEY (placeId) REFERENCES Place(id) ON DELETE CASCADE
);

CREATE TABLE Place (
    id INT AUTO_INCREMENT PRIMARY KEY,
    ownerId INT NOT NULL,
    title VARCHAR(255) NOT NULL,
    address VARCHAR(255) NOT NULL,
    latitude DECIMAL(10, 8),
    longitude DECIMAL(11, 8),
    area INT NOT NULL,
    description TEXT NOT NULL,
    extraInfo TEXT,
    duration INT NOT NULL,
    price FLOAT NOT NULL,
    status ENUM('SEE', 'HIDDEN', 'DELETE') DEFAULT 'SEE',
    createAt DATETIME DEFAULT CURRENT_TIMESTAMP,
    updateAt DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (ownerId) REFERENCES User(id) ON DELETE CASCADE
);

CREATE TABLE PlacePhoto (
    id INT AUTO_INCREMENT PRIMARY KEY,
    url VARCHAR(255) NOT NULL,
    placeId INT NOT NULL,
    FOREIGN KEY (placeId) REFERENCES Place(id) ON DELETE CASCADE
);

CREATE TABLE PlacePerk (
    id CHAR(36) PRIMARY KEY,
    perk VARCHAR(255) NOT NULL,
    placeId INT NOT NULL,
    FOREIGN KEY (placeId) REFERENCES Place(id) ON DELETE CASCADE
);

CREATE TABLE Booking (
    id INT AUTO_INCREMENT PRIMARY KEY,
    placeId INT NOT NULL,
    renterId INT NOT NULL,
    checkOut DATETIME,
    status ENUM('PENDING', 'APPROVED', 'REJECTED', 'WAIT', 'RENTED') DEFAULT 'PENDING',
    isContinue BOOLEAN DEFAULT FALSE,
    createAt DATETIME DEFAULT CURRENT_TIMESTAMP,
    updateAt DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (placeId) REFERENCES Place(id) ON DELETE CASCADE,
    FOREIGN KEY (renterId) REFERENCES User(id) ON DELETE CASCADE
);

CREATE TABLE Invoice (
    id INT AUTO_INCREMENT PRIMARY KEY,
    bookingId INT NOT NULL,
    title VARCHAR(255) NOT NULL,
    description TEXT,
    createdAt DATETIME DEFAULT CURRENT_TIMESTAMP,
    updateAt DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (bookingId) REFERENCES Booking(id) ON DELETE CASCADE
);

CREATE TABLE InvoicePhoto (
    id INT AUTO_INCREMENT PRIMARY KEY,
    url VARCHAR(255) NOT NULL,
    invoiceId INT NOT NULL,
    FOREIGN KEY (invoiceId) REFERENCES Invoice(id) ON DELETE CASCADE
);

CREATE TABLE Comment (
    id INT AUTO_INCREMENT PRIMARY KEY,
    content TEXT NOT NULL,
    createdAt DATETIME DEFAULT CURRENT_TIMESTAMP,
    updatedAt DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    userId INT NOT NULL,
    bookingId INT UNIQUE NOT NULL,
    FOREIGN KEY (userId) REFERENCES User(id) ON DELETE CASCADE,
    FOREIGN KEY (bookingId) REFERENCES Booking(id) ON DELETE CASCADE
);

CREATE TABLE Favourite (
    id INT AUTO_INCREMENT PRIMARY KEY,
    userId INT NOT NULL,
    placeId INT NOT NULL,
    createdAt DATETIME DEFAULT CURRENT_TIMESTAMP,
    updatedAt DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (userId) REFERENCES User(id) ON DELETE CASCADE,
    FOREIGN KEY (placeId) REFERENCES Place(id) ON DELETE CASCADE,
    UNIQUE(userId, placeId)
);

CREATE TABLE Notification (
    id INT AUTO_INCREMENT PRIMARY KEY,
    userId INT NOT NULL,
    type VARCHAR(50) NOT NULL,
    message TEXT NOT NULL,
    read BOOLEAN DEFAULT FALSE,
    createdAt DATETIME DEFAULT CURRENT_TIMESTAMP,
    updatedAt DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    placeId INT,
    FOREIGN KEY (userId) REFERENCES User(id) ON DELETE CASCADE,
    FOREIGN KEY (placeId) REFERENCES Place(id) ON DELETE CASCADE,
    UNIQUE(userId, type, createdAt)
);
